# metacsp

./: .gitignore  LICENSE  PLAN-docs.md  PLAN-webviz.md  PLAN.md  README.md  mkdocs.yml  pyproject.toml  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
docs/: VIZ.md  getting-started.md  index.md  visualization.md
docs/api/: boolean_sat.md  dispatching.md  exceptions.md  framework.md  framework.meta.md  framework.multi.md  fuzzy_allen_interval.md  fuzzy_symbols.md  meta.fuzzy_activity.md  meta.hybrid_planner.md  meta.simple_planner.md  meta.spatio_temporal.paths.md  meta.symbols_and_time.md  meta.tcsp.md  multi.activity.md  multi.allen_interval.md  multi.fuzzy_activity.md  multi.fuzzy_set_activity.md  multi.spatial.block_algebra.md  multi.spatial.de9im.md  multi.spatial.rectangle_algebra.md  multi.spatio_temporal.md  (+16 more)
examples/: README.md  SKIPPED.md  ackermann_test.py  test_apsp_solver.py  test_apsp_solver_independent_constraints.py  test_apsp_solver_simple.py  test_boolean_satisfiability_solver_sat_alternative1.py  test_boolean_satisfiability_solver_sat_alternative2.py  test_boolean_satisfiability_solver_sat_non_cnf.py  test_boolean_satisfiability_solver_sat_non_cnf_simple.py  test_boolean_satisfiability_solver_sat_non_cnf_simple_separate_constraints.py  test_boolean_satisfiability_solver_unsat.py  test_boolean_satisfiability_solver_unsat_non_cnf.py  test_boolean_satisfiability_solver_unsat_non_cnf_simple.py  test_de9im_relation_solver.py  test_de9im_relation_solver_simple.py  test_fuzzy_allen_interval_network_solver.py  test_fuzzy_symbolic_variable_constraint_solver.py  test_geometric_constraint_solver.py  test_geometric_constraint_solver2.py  test_qualitative_allen_constraint_solver.py  test_qualitative_allen_constraint_solver_unsat.py  test_rcc2_constraint_solver.py  test_rcc_constraint_network_solver.py  viz_timeline_demo.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tests/: test_activity_network_solver.py  test_allen_interval.py  test_allen_interval_network_solver.py  test_apsp_solver.py  test_boolean_sat.py  test_bounds.py  test_de9im.py  test_dispatching.py  test_framework.py  test_fuzzy_activity_meta_solver.py  test_fuzzy_allen_interval_network_solver.py  test_fuzzy_symbolic_variable_constraint_solver.py  test_geometry.py  test_graph.py  test_hybrid_planner.py  test_math.py  test_meta_framework.py  test_multi_framework.py  test_online_monitoring.py  test_pose.py  test_rcc.py  test_rectangle_algebra.py  test_scheduler.py  test_serialization.py  test_simple_planner.py  test_smoke.py  test_symbols.py  test_te_scheduler.py  test_trajectory_envelope.py  test_tutorial_examples.py  test_viz.py
(+303 files in other folders)
