[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metacsp"
version = "0.0.1"
description = "Python port of the Meta-CSP Framework: meta-CSP based hybrid temporal, spatial, and resource constraint reasoning"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chittaranjan Srinivas Swaminathan", email = "chittaranjan@dynorobotics.se" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "shapely>=2.0",
    "python-sat>=0.1.7",
    "sympy>=1.12",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7", "black>=24", "matplotlib>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/metacsp"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
