[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metacsp"
version = "1.0.0"
description = "Python port of the Meta-CSP Framework: meta-CSP based hybrid temporal, spatial, and resource constraint reasoning"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chittaranjan Srinivas Swaminathan", email = "chittaranjan@dynorobotics.se" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "shapely>=2.0",
    "python-sat>=0.1.7",
    "sympy>=1.12",
]

[project.optional-dependencies]
viz = ["dearpygui>=1.11"]
dev = ["pytest>=7", "black>=24", "dearpygui>=1.11"]

[tool.hatch.build.targets.wheel]
packages = ["src/metacsp"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
