[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metacsp"
version = "1.1.1"
description = "Python port of the Meta-CSP Framework: meta-CSP based hybrid temporal, spatial, and resource constraint reasoning"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chittaranjan Srinivas Swaminathan", email = "chittaranjan@dynorobotics.se" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "shapely>=2.0",
    "python-sat>=0.1.7",
    "sympy>=1.12",
]

[project.optional-dependencies]
viz = ["starlette>=0.37", "uvicorn>=0.29"]
dev = ["pytest>=7", "black>=24", "starlette>=0.37", "uvicorn>=0.29", "httpx>=0.27"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]

[tool.hatch.build]
artifacts = ["src/metacsp/viz/static/"]

[tool.hatch.build.targets.wheel]
packages = ["src/metacsp"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
